more pods added

--- a/index.html
+++ b/index.html
@@ -219,11 +219,11 @@
         <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP13-1.png');"></div>
           <div class="text">
-
             <h3 class="font-weight-light"><a href="single-post.html">Episode 13: Does governance decentralisation work?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>By Sathya Sankaran <span class="sep">/</span> 29 April 2023 <span class="sep">/</span> 59:30</small></span></div>
             <p class="mb-4">This episode is with Srinivas Alavilli who talks about how ward level decentralised ways of working can solve issues. Challenges and opportunities in making decentralisation work. For more than a decade he has been a change maker in the Bengaluru civic and political scene. Been a part of many citizen movements and extensive experience in organising ward level meetings in various capacities.</p>
-            <h5 class="mb-1">Watch on</h5>
+              <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Does-governance-decentralisation-work---OoruLabs-Talking-Heads-podcast-Episode-13-e2376vn" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
+            <h5 class="mb-1">Also on</h5>
             <div>
               <a href="https://youtu.be/w-nS-qid9PY" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-youtube"></span></a>
@@ -236,15 +236,14 @@
           </div>
         </div>
 
-
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP12-1.png');"></div>
           <div class="text">
-
             <h3 class="font-weight-light"><a href="single-post.html">Episode 12: Policy education and public problem solving</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>By Sathya Sankaran <span class="sep">/</span> 22 April 2023 <span class="sep">/</span> 59:43</small></span></div>
             <p class="mb-4">In this podcast Dr Ashwin Mahesh talks to us about public problem solving and the approach one should take to begin the journey. He also throws light on challenges within the interplay of state market and society in providing effective solutions.</p>
-            <h5 class="mb-1">Watch on</h5>
+              <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Policy-education-and-public-problem-solving--OoruLabs-Talking-Heads-podcast-Episode-12-e22ra15" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
+            <h5 class="mb-1">Also on</h5>
             <div>
               <a href="https://youtu.be/sDlwSq5n8ks" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-youtube"></span></a>
@@ -257,15 +256,14 @@
           </div>
         </div>
 
-
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
             <div class="image" style="background-image: url('images/pod-images/OoruLabs EP11-1.png');"></div>
             <div class="text">
-
               <h3 class="font-weight-light"><a href="single-post.html">Episode 11: Suburban Rail sidelined?</a></h3>
               <div class="text-white mb-3"><span class="text-black-opacity-05"><small>By Sathya Sankaran <span class="sep">/</span> 16 April 2023 <span class="sep">/</span> 37:59</small></span></div>
               <p class="mb-4">n this podcast is Sanjeev Dymannavar. He played an instrumental role in the Namma Railu (http://praja.in/en/nammarailu) campaign for more than 12 years to bring Suburban Rail to Bengaluru.  He was also awarded the Namma Bengaluru citizen of the year for his persistence in this campaign.</p>
-            <h5 class="mb-1">Watch on</h5>
+                <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Suburban-Rail-sidelined---OoruLabs-Talking-Heads-podcast-Episode-11-e22ej93" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
+            <h5 class="mb-1">Also on</h5>
             <div>
               <a href="https://youtu.be/8JLXnSCC41g" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-youtube"></span></a>
@@ -277,15 +275,14 @@
             </div>
           </div>
 
-
           <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
             <div class="image" style="background-image: url('images/pod-images/OoruLabs EP10-1.png');"></div>
             <div class="text">
-
               <h3 class="font-weight-light"><a href="single-post.html">Episode 10: How smart are our cities?</a></h3>
               <div class="text-white mb-3"><span class="text-black-opacity-05"><small>By Sathya Sankaran <span class="sep">/</span> 7 April 2023 <span class="sep">/</span> 42:26</small></span></div>
               <p class="mb-4">In this podcast is Venugopal AV. As a part of ITDP, he has been supporting the National Smart Cities Mission, MoHUA for the India Cycles4Change and Streets4People Challenges since June 2020. He has been leading the coordination team from ITDP India for both the Challenges. Through these initiatives, ITDP India has been guiding over 100 cities across India to create safer healthier and happier streets and public spaces.</p>
-            <h5 class="mb-1">Watch on</h5>
+                <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/How-smart-are-our-cities---OoruLabs-Talking-Heads-podcast-Episode-10-e21uda9" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
+            <h5 class="mb-1">Also on</h5>
             <div>
               <a href="https://youtu.be/rZ70r3epZnk" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-youtube"></span></a>
@@ -297,15 +294,14 @@
             </div>
           </div>
 
-
           <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
             <div class="image" style="background-image: url('images/pod-images/OoruLabs EP09-1.png');"></div>
             <div class="text">
-
               <h3 class="font-weight-light"><a href="single-post.html">Episode 09: Is ride sharing in trouble?</a></h3>
               <div class="text-white mb-3"><span class="text-black-opacity-05"><small>By Sathya Sankaran <span class="sep">/</span> 1 April 2023 <span class="sep">/</span> 39:02</small></span></div>
-              <p class="mb-4">In this podcast we’ll be speaking with Shahed Hashmi, a Public Policy and Corporate Affairs professional who has spent the past few years in fast-growing shared mobility and last mile delivery startups. </p>
-            <h5 class="mb-1">Watch on</h5>
+              <p class="mb-4">In this podcast we speak with Shahed Hashmi, a Public Policy and Corporate Affairs professional who has spent the past few years in fast-growing shared mobility and last mile delivery startups. </p>
+                <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Is-ride-sharing-in-trouble---OoruLabs-Talking-Heads-podcast-Episode-09-e21hl8c" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
+            <h5 class="mb-1">Also on</h5>
             <div>
               <a href="https://youtu.be/pm8tHJuico8" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-youtube"></span></a>
@@ -316,7 +312,44 @@
             </div>
             </div>
           </div>
+ 
+          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
+            <div class="image" style="background-image: url('images/pod-images/OoruLabs EP08-1.jpg');"></div>
+            <div class="text">
+              <h3 class="font-weight-light"><a href="single-post.html">Episode 08: Is this the end of App Aggregators? </a></h3>
+              <div class="text-white mb-3"><span class="text-black-opacity-05"><small>By Sathya Sankaran <span class="sep">/</span> 26 March 2023 <span class="sep">/</span> 56:51</small></span></div>
+              <p class="mb-4">In this podcast we speak with Satya Arikuthram, a transport expert who has worked with firms like Atkins in the UK and was the chief technical advisor at DULT. He is now an independent consultant and has worked on the Namma Yatri (www.nammayatri.in) app rollout with Auto drivers in Bengaluru</p>
+                <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Is-this-the-end-of-App-Aggregators---OoruLabs-Talking-Heads-podcast-Episode-08-e215kj2" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
+            <h5 class="mb-1">Also on</h5>
+            <div>
+              <a href="https://youtu.be/KY2DrcR1DaQ" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-youtube"></span></a>
+              <a href="https://open.spotify.com/episode/5CncbWXjQ49B6gQT8g2R0I?si=37ffddbadb9543df" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-spotify"></span></a>
+              <a href="https://podcasts.apple.com/in/podcast/the-oorulabs-podcast/id1682407685?i=1000608903016" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-podcast"></span></a>
+            </div>
+            </div>
+          </div>
 
+          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
+            <div class="image" style="background-image: url('images/pod-images/OoruLabs EP07-1.jpg');"></div>
+            <div class="text">
+              <h3 class="font-weight-light"><a href="single-post.html">Episode 07: Will Bicycle Sharing work in India? </a></h3>
+              <div class="text-white mb-3"><span class="text-black-opacity-05"><small>By Sathya Sankaran <span class="sep">/</span> 18 March 2023 <span class="sep">/</span> 55:53</small></span></div>
+              <p class="mb-4">We speak with Arjit Soni, a Chartered Accountant, who runs a bootstrapped Public Bicycle Sharing System called MYBYK across 6 cities in India. </p>
+                <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Will-Bicycle-Sharing-work-in-India---OoruLabs-Talking-Heads-podcast-Episode-07-e20long" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
+            <h5 class="mb-1">Also on</h5>
+            <div>
+              <a href=" https://youtu.be/bUHD4u77MSA" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-youtube"></span></a>
+              <a href="https://open.spotify.com/episode/1qfsCPwg1czTMQn1UqHpNi?si=e60b17ffa6674dec" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-spotify"></span></a>
+              <a href="https://podcasts.apple.com/in/podcast/the-oorulabs-podcast/id1682407685?i=1000608903017" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-podcast"></span></a>
+            </div>
+            </div>
+          </div>
 
       </div>
       <div class="container" data-aos="fade-up">
