--- a/contact.html
+++ b/contact.html
@@ -54,29 +54,7 @@
 
                 <ul class="site-menu js-clone-nav d-none">
                   <li class="has-children">
-                    <a href="index.html">Home</a>
-                    <ul class="dropdown arrow-top">
-                      <li><a href="#">Menu One</a></li>
-                      <li><a href="#">Menu Two</a></li>
-                      <li><a href="#">Menu Three</a></li>
-                      <li class="has-children">
-                        <a href="#">Sub Menu</a>
-                        <ul class="dropdown">
-                          <li><a href="#">Menu One</a></li>
-                          <li><a href="#">Menu Two</a></li>
-                          <li><a href="#">Menu Three</a></li>
-                        </ul>
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="has-children">
-                    <a href="#">Dropdown</a>
-                    <ul class="dropdown arrow-top">
-                      <li><a href="#">Menu One</a></li>
-                      <li><a href="#">Menu Two</a></li>
-                      <li><a href="#">Menu Three</a></li>
-                    </ul>
-                  </li>
+                  <li><a href="index.html">Home</a></li>
                   <li><a href="about.html">About</a></li>
                   <li class="active"><a href="contact.html">Contact</a></li>
                 </ul>
@@ -198,17 +176,8 @@
               <div class="col-md-6 col-lg-6">
                 <ul class="list-unstyled">
                   <li><a href="index.html">Home</a></li>
-                  <li><a href="#">Matches</a></li>
-                  <li><a href="#">News</a></li>
-                  <li><a href="#">Team</a></li>
-                </ul>
-              </div>
-              <div class="col-md-6 col-lg-6">
-                <ul class="list-unstyled">
-                  <li><a href="about.html">About Us</a></li>
-                  <li><a href="#">Privacy Policy</a></li>
-                  <li><a href="contact.html">Contact Us</a></li>
-                  <li><a href="#">Membership</a></li>
+                  <li class="active"><a href="about.html">About</a></li>
+                  <li><a href="contact.html">Contact</a></li>
                 </ul>
               </div>
             </div>
