--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <div class="container">
         <div class="row mb-5">
           <div class="col-md-12 text-center">
-            <h2 class="font-weight-bold text-black">Featured Guests</h2>
+            <h2 class="font-weight-bold text-black">Talking Heads - Featured Guests</h2>
           </div>
         </div>
         <div class="nonloop-block-13 owl-carousel">
@@ -196,8 +196,8 @@
         <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP13-1.png');"></div>
           <div class="text">
-            <h3 class="font-weight-light"><a href="single-post.html">Episode 13: Does governance decentralisation work?</a></h3>
-            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> Sathya Sankaran <span class="sep">/</span> 29 April 2023 <span class="sep">/</span> 59:30</small></span></div>
+            <h3 class="font-weight-light"><a href="#">Episode 13: Does governance decentralisation work?</a></h3>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 29 April 2023 <span class="sep">/</span> 59:30</small></span></div>
             <p class="mb-4">This episode is with Srinivas Alavilli who talks about how ward level decentralised ways of working can solve issues. Challenges and opportunities in making decentralisation work. For more than a decade he has been a change maker in the Bengaluru civic and political scene. Been a part of many citizen movements and extensive experience in organising ward level meetings in various capacities.</p>
               <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Does-governance-decentralisation-work---OoruLabs-Talking-Heads-podcast-Episode-13-e2376vn" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
@@ -216,8 +216,8 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP12-1.png');"></div>
           <div class="text">
-            <h3 class="font-weight-light"><a href="single-post.html">Episode 12: Policy education and public problem solving</a></h3>
-            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> Sathya Sankaran <span class="sep">/</span> 22 April 2023 <span class="sep">/</span> 59:43</small></span></div>
+            <h3 class="font-weight-light"><a href="#">Episode 12: Policy education and public problem solving</a></h3>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 22 April 2023 <span class="sep">/</span> 59:43</small></span></div>
             <p class="mb-4">In this podcast Dr Ashwin Mahesh talks to us about public problem solving and the approach one should take to begin the journey. He also throws light on challenges within the interplay of state market and society in providing effective solutions.</p>
               <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Policy-education-and-public-problem-solving--OoruLabs-Talking-Heads-podcast-Episode-12-e22ra15" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
@@ -236,8 +236,8 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
             <div class="image" style="background-image: url('images/pod-images/OoruLabs EP11-1.png');"></div>
             <div class="text">
-              <h3 class="font-weight-light"><a href="single-post.html">Episode 11: Suburban Rail sidelined?</a></h3>
-              <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> Sathya Sankaran <span class="sep">/</span> 16 April 2023 <span class="sep">/</span> 37:59</small></span></div>
+              <h3 class="font-weight-light"><a href="#">Episode 11: Suburban Rail sidelined?</a></h3>
+              <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 16 April 2023 <span class="sep">/</span> 37:59</small></span></div>
               <p class="mb-4">n this podcast is Sanjeev Dymannavar. He played an instrumental role in the Namma Railu (http://praja.in/en/nammarailu) campaign for more than 12 years to bring Suburban Rail to Bengaluru.  He was also awarded the Namma Bengaluru citizen of the year for his persistence in this campaign.</p>
                 <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Suburban-Rail-sidelined---OoruLabs-Talking-Heads-podcast-Episode-11-e22ej93" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
@@ -255,8 +255,8 @@
           <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
             <div class="image" style="background-image: url('images/pod-images/OoruLabs EP10-1.png');"></div>
             <div class="text">
-              <h3 class="font-weight-light"><a href="single-post.html">Episode 10: How smart are our cities?</a></h3>
-              <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> Sathya Sankaran <span class="sep">/</span> 7 April 2023 <span class="sep">/</span> 42:26</small></span></div>
+              <h3 class="font-weight-light"><a href="#">Episode 10: How smart are our cities?</a></h3>
+              <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 7 April 2023 <span class="sep">/</span> 42:26</small></span></div>
               <p class="mb-4">In this podcast is Venugopal AV. As a part of ITDP, he has been supporting the National Smart Cities Mission, MoHUA for the India Cycles4Change and Streets4People Challenges since June 2020. He has been leading the coordination team from ITDP India for both the Challenges. Through these initiatives, ITDP India has been guiding over 100 cities across India to create safer healthier and happier streets and public spaces.</p>
                 <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/How-smart-are-our-cities---OoruLabs-Talking-Heads-podcast-Episode-10-e21uda9" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
@@ -274,8 +274,8 @@
           <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
             <div class="image" style="background-image: url('images/pod-images/OoruLabs EP09-1.png');"></div>
             <div class="text">
-              <h3 class="font-weight-light"><a href="single-post.html">Episode 09: Is ride sharing in trouble?</a></h3>
-              <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> Sathya Sankaran <span class="sep">/</span> 1 April 2023 <span class="sep">/</span> 39:02</small></span></div>
+              <h3 class="font-weight-light"><a href="#">Episode 09: Is ride sharing in trouble?</a></h3>
+              <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 1 April 2023 <span class="sep">/</span> 39:02</small></span></div>
               <p class="mb-4">In this podcast we speak with Shahed Hashmi, a Public Policy and Corporate Affairs professional who has spent the past few years in fast-growing shared mobility and last mile delivery startups. </p>
                 <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Is-ride-sharing-in-trouble---OoruLabs-Talking-Heads-podcast-Episode-09-e21hl8c" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
@@ -293,8 +293,8 @@
           <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
             <div class="image" style="background-image: url('images/pod-images/OoruLabs EP08-1.jpg');"></div>
             <div class="text">
-              <h3 class="font-weight-light"><a href="single-post.html">Episode 08: Is this the end of App Aggregators? </a></h3>
-              <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> Sathya Sankaran <span class="sep">/</span> 26 March 2023 <span class="sep">/</span> 56:51</small></span></div>
+              <h3 class="font-weight-light"><a href="#">Episode 08: Is this the end of App Aggregators? </a></h3>
+              <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 26 March 2023 <span class="sep">/</span> 56:51</small></span></div>
               <p class="mb-4">In this podcast we speak with Satya Arikuthram, a transport expert who has worked with firms like Atkins in the UK and was the chief technical advisor at DULT. He is now an independent consultant and has worked on the Namma Yatri (www.nammayatri.in) app rollout with Auto drivers in Bengaluru</p>
                 <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Is-this-the-end-of-App-Aggregators---OoruLabs-Talking-Heads-podcast-Episode-08-e215kj2" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
@@ -312,8 +312,8 @@
           <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
             <div class="image" style="background-image: url('images/pod-images/OoruLabs EP07-1.jpg');"></div>
             <div class="text">
-              <h3 class="font-weight-light"><a href="single-post.html">Episode 07: Will Bicycle Sharing work in India? </a></h3>
-              <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span>  Sathya Sankaran <span class="sep">/</span> 18 March 2023 <span class="sep">/</span> 55:53</small></span></div>
+              <h3 class="font-weight-light"><a href="#">Episode 07: Will Bicycle Sharing work in India? </a></h3>
+              <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 18 March 2023 <span class="sep">/</span> 55:53</small></span></div>
               <p class="mb-4">We speak with Arjit Soni, a Chartered Accountant, who runs a bootstrapped Public Bicycle Sharing System called MYBYK across 6 cities in India. </p>
                 <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Will-Bicycle-Sharing-work-in-India---OoruLabs-Talking-Heads-podcast-Episode-07-e20long" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
@@ -331,8 +331,8 @@
           <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
             <div class="image" style="background-image: url('images/pod-images/OoruLabs EP06-1.png');"></div>
             <div class="text">
-              <h3 class="font-weight-light"><a href="single-post.html">Episode 06: Is there an e-bus revolution in India? </a></h3>
-              <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> Sathya Sankaran <span class="sep">/</span> 12 March 2023 <span class="sep">/</span> 54:42</small></span></div>
+              <h3 class="font-weight-light"><a href="#">Episode 06: Is there an e-bus revolution in India? </a></h3>
+              <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 12 March 2023 <span class="sep">/</span> 54:42</small></span></div>
               <p class="mb-4">We speak with Ravi Gadepalli transport consultant who has worked in the national e-bus procurement. He has worked with the World Bank, ADB, UITP and IFC on the India e-bus story </p>
                   <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Is-there-an-e-bus-revolution-in-India---OoruLabs-Talking-Heads-podcast-Episode-06-e208nis" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
@@ -350,8 +350,8 @@
           <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
             <div class="image" style="background-image: url('images/pod-images/CommuterPod EP 01-1.png');"></div>
             <div class="text">
-              <h3 class="font-weight-light"><a href="single-post.html">Episode 01: First urban liveability themed cartoons in India? </a></h3>
-              <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Commuter Series <span class="sep">/</span> Sathya Sankaran <span class="sep">/</span> 5 March 2023 <span class="sep">/</span> 32:41</small></span></div>
+              <h3 class="font-weight-light"><a href="#">Episode 01: First urban liveability themed cartoons in India? </a></h3>
+              <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Commuter Series <span class="sep">/</span> 5 March 2023 <span class="sep">/</span> 32:41</small></span></div>
               <p class="mb-4">We speak with Shilpi Sahu a runner and bicycle commuter in Bengaluru about her passion for illustrating contemporary urban issues with her pencil and canvas.</p>
                   <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/First-urban-liveability-themed-cartoons-in-India---OoruLabs-Commuter-Series-podcast-EP01-e1vsjlc" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
@@ -369,8 +369,8 @@
           <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
             <div class="image" style="background-image: url('images/pod-images/OoruLabs EP05-1.png');"></div>
             <div class="text">
-              <h3 class="font-weight-light"><a href="single-post.html">Episode 05: Should you wear a bicycle helmet in the city? </a></h3>
-              <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Hot Takes <span class="sep">/</span> Sathya Sankaran <span class="sep">/</span> 26 February 2023 <span class="sep">/</span> 35:06</small></span></div>
+              <h3 class="font-weight-light"><a href="#">Episode 05: Should you wear a bicycle helmet in the city? </a></h3>
+              <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Hot Takes <span class="sep">/</span> 26 February 2023 <span class="sep">/</span> 35:06</small></span></div>
               <p class="mb-4">Knerav and Sathya spar it out with the pros and cons of wearing a bicycle helmet for commute.</p>
                   <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Should-you-wear-a-bicycle-helmet-in-the-city---OoruLabs-Podcast-Episode-05-e1vgsrm" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
@@ -388,8 +388,8 @@
           <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
             <div class="image" style="background-image: url('images/pod-images/OoruLabs EP04-1.png');"></div>
             <div class="text">
-              <h3 class="font-weight-light"><a href="single-post.html">Episode 04: What the Dutch! </a></h3>
-              <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> Sathya Sankaran <span class="sep">/</span> 19 February 2023 <span class="sep">/</span> 51:31</small></span></div>
+              <h3 class="font-weight-light"><a href="#">Episode 04: What the Dutch! </a></h3>
+              <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 19 February 2023 <span class="sep">/</span> 51:31</small></span></div>
               <p class="mb-4">We speak with Dirk De Jager, former Dy Mayor of various Amsterdam districts and consultant who has helped cities in Iran and Turkey put up bicycle lanes.</p>
                   <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/What-the-Dutch--OoruLabs-Podcast-Ep-4-e1v685i" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
@@ -407,8 +407,8 @@
           <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
             <div class="image" style="background-image: url('images/pod-images/OoruLabs EP03-1.png');"></div>
             <div class="text">
-              <h3 class="font-weight-light"><a href="single-post.html">Episode 03: Did we miss the bus? </a></h3>
-              <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> Sathya Sankaran <span class="sep">/</span> 12 February 2023 <span class="sep">/</span> 41:22</small></span></div>
+              <h3 class="font-weight-light"><a href="#">Episode 03: Did we miss the bus? </a></h3>
+              <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 12 February 2023 <span class="sep">/</span> 41:22</small></span></div>
               <p class="mb-4">We speak with Shreya Gadepalli about the story of the bus in India. She is the founder of Urbanworks Institute. She guided dozens of cities with ITDP India over two decades to design and implement public transport systems and inclusive streets, as well as regulate motor vehicle use.</p>
                   <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Did-we-miss-the-bus---OoruLabs-Podcast-EP3-e1urf8k" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
