--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <h5><span class="badge bg-success text-white">Coming soon</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 15: The problem with parking</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 13 May 2023 <span class="sep">/</span> </small></span></div>
-            <p class="mb-4">This episode is with Dr Paul Barter who talks about parking issues world wide. How sustainability in transport cannot ignore parking and its reform. He has worked for more than two decades on parking reforms and host of the Reinventing parking podcast.</p>
+            <p class="mb-4">This episode is with Dr Paul Barter who talks about parking issues world wide. How sustainability in transport cannot ignore parking and its reform. He has worked for more than two decades on parking reforms and is the host of the Reinventing parking podcast.</p>
             <h5 class="mb-1">Also on</h5>
             <div>
               <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
@@ -238,7 +238,7 @@
             <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 14: Are we measuring mobility right?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 6 May 2023 <span class="sep">/</span> 54:05</small></span></div>
-            <p class="mb-4">This episode is with Roshan Toshniwal who talks about how metrics used to measure mobility are yet to be standardised. The challenges in data collection measurement and reporting of qualitative metrics are next to non existent. He has worked with consulting companies and currently with Ola Mobility Institute released the Ease of Moving index.</p>
+            <p class="mb-4">In this episode Roshan Toshniwal of Ola Mobility Institute talks about how metrics used to measure mobility are yet to be standardised. The challenges in data collection measurement and reporting of qualitative metrics are next to non existent. In the first week of May he released the Ease of Moving index he worked on at OMI.</p>
             <h5 class="mb-1">Also on</h5>
             <div>
               <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
@@ -256,7 +256,7 @@
           <div class="text">
             <h3 class="font-weight-light"><a href="#">Episode 13: Does governance decentralisation work?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 29 April 2023 <span class="sep">/</span> 59:30</small></span></div>
-            <p class="mb-4">This episode is with Srinivas Alavilli who talks about how ward level decentralised ways of working can solve issues. Challenges and opportunities in making decentralisation work. For more than a decade he has been a change maker in the Bengaluru civic and political scene. Been a part of many citizen movements and extensive experience in organising ward level meetings in various capacities.</p>
+            <p class="mb-4">This episode is with Srinivas Alavilli who talks about how ward level decentralised ways of working can solve issues. He calls attention to the dangers in the existing civil society framework and his experiences with ward committees in Bengaluru.</p>
               <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Does-governance-decentralisation-work---OoruLabs-Talking-Heads-podcast-Episode-13-e2376vn" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
             <div>
@@ -275,7 +275,7 @@
           <div class="text">
             <h3 class="font-weight-light"><a href="#">Episode 12: Policy education and public problem solving</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 22 April 2023 <span class="sep">/</span> 59:43</small></span></div>
-            <p class="mb-4">In this podcast Dr Ashwin Mahesh talks to us about public problem solving and the approach one should take to begin the journey. He also throws light on challenges within the interplay of state market and society in providing effective solutions.</p>
+            <p class="mb-4">In this podcast Dr Ashwin Mahesh talks to us about public problem solving and the approach one should take to begin the journey. He also throws light on challenges within the interplay of state market and society in providing effective solutions. He provides valuable inputs for people on how to begin their journey in problem solving.</p>
               <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Policy-education-and-public-problem-solving--OoruLabs-Talking-Heads-podcast-Episode-12-e22ra15" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
             <div>
@@ -295,7 +295,7 @@
             <div class="text">
               <h3 class="font-weight-light"><a href="#">Episode 11: Suburban Rail sidelined?</a></h3>
               <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 16 April 2023 <span class="sep">/</span> 37:59</small></span></div>
-              <p class="mb-4">n this podcast is Sanjeev Dymannavar. He played an instrumental role in the Namma Railu (http://praja.in/en/nammarailu) campaign for more than 12 years to bring Suburban Rail to Bengaluru.  He was also awarded the Namma Bengaluru citizen of the year for his persistence in this campaign.</p>
+              <p class="mb-4">In this podcast is Sanjeev Dymannavar. He played an instrumental role in the <a href="http://praja.in/en/nammarailu">Namma Railu</a> campaign for more than 12 years to bring Suburban Rail to Bengaluru.  He was also awarded the Namma Bengaluru citizen of the year for his persistence in this campaign.</p>
                 <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Suburban-Rail-sidelined---OoruLabs-Talking-Heads-podcast-Episode-11-e22ej93" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
             <div>
@@ -314,7 +314,7 @@
             <div class="text">
               <h3 class="font-weight-light"><a href="#">Episode 10: How smart are our cities?</a></h3>
               <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 7 April 2023 <span class="sep">/</span> 42:26</small></span></div>
-              <p class="mb-4">In this podcast is Venugopal AV. As a part of ITDP, he has been supporting the National Smart Cities Mission, MoHUA for the India Cycles4Change and Streets4People Challenges since June 2020. He has been leading the coordination team from ITDP India for both the Challenges. Through these initiatives, ITDP India has been guiding over 100 cities across India to create safer healthier and happier streets and public spaces.</p>
+              <p class="mb-4">In this podcast Venugopal AV of ITDP India talks about the journey of working with Smart City Mission, Ministry of Housing and Urban Affairs and the many smart cities under it. He demystifies the smart cities, their structure, the challenges in their functioning and the way forward.</p>
                 <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/How-smart-are-our-cities---OoruLabs-Talking-Heads-podcast-Episode-10-e21uda9" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
             <div>
@@ -333,7 +333,7 @@
             <div class="text">
               <h3 class="font-weight-light"><a href="#">Episode 09: Is ride sharing in trouble?</a></h3>
               <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 1 April 2023 <span class="sep">/</span> 39:02</small></span></div>
-              <p class="mb-4">In this podcast we speak with Shahed Hashmi, a Public Policy and Corporate Affairs professional who has spent the past few years in fast-growing shared mobility and last mile delivery startups. </p>
+              <p class="mb-4">In this podcast we speak with Shahed Hashmi, a Public Policy and Corporate Affairs professional who has spent the past few years in fast-growing shared mobility and last mile delivery startups. He addresses the various challenges they face in providing shared mobility in cities.</p>
                 <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Is-ride-sharing-in-trouble---OoruLabs-Talking-Heads-podcast-Episode-09-e21hl8c" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
             <div>
@@ -352,7 +352,7 @@
             <div class="text">
               <h3 class="font-weight-light"><a href="#">Episode 08: Is this the end of App Aggregators? </a></h3>
               <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 26 March 2023 <span class="sep">/</span> 56:51</small></span></div>
-              <p class="mb-4">In this podcast we speak with Satya Arikuthram, a transport expert who has worked with firms like Atkins in the UK and was the chief technical advisor at DULT. He is now an independent consultant and has worked on the Namma Yatri (www.nammayatri.in) app rollout with Auto drivers in Bengaluru</p>
+              <p class="mb-4">In this podcast we speak with Satya Arikuthram about the resurgence of Autorickshaws powered by ONDC. He has worked on the Namma Yatri app rollout with <a href="https://www.ardu.org.in">Auto drivers</a> in Bengaluru. He speaks about the potentials and benefits of this new model.</p>
                 <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Is-this-the-end-of-App-Aggregators---OoruLabs-Talking-Heads-podcast-Episode-08-e215kj2" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
             <div>
@@ -371,7 +371,7 @@
             <div class="text">
               <h3 class="font-weight-light"><a href="#">Episode 07: Will Bicycle Sharing work in India? </a></h3>
               <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 18 March 2023 <span class="sep">/</span> 55:53</small></span></div>
-              <p class="mb-4">We speak with Arjit Soni, a Chartered Accountant, who runs a bootstrapped Public Bicycle Sharing System called MYBYK across 6 cities in India. </p>
+              <p class="mb-4">We speak with Arjit Soni, who runs a bootstrapped Public Bicycle Sharing System called MYBYK across 6 cities in India, on the potential of bicycle sharing. Why he has been able to survive when the big guns with money failed in the bicycle sharing. THe advantages of his model and his challenges. </p>
                 <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Will-Bicycle-Sharing-work-in-India---OoruLabs-Talking-Heads-podcast-Episode-07-e20long" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
             <div>
@@ -390,7 +390,7 @@
             <div class="text">
               <h3 class="font-weight-light"><a href="#">Episode 06: Is there an e-bus revolution in India? </a></h3>
               <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 12 March 2023 <span class="sep">/</span> 54:42</small></span></div>
-              <p class="mb-4">We speak with Ravi Gadepalli transport consultant who has worked in the national e-bus procurement. He has worked with the World Bank, ADB, UITP and IFC on the India e-bus story </p>
+              <p class="mb-4">We speak with Ravi Gadepalli, a transport consultant with the World Bank, ADB, UITP and IFC, who has worked in the national e-bus procurement, about the India e-bus story. The challenges in moving our bus fleet to electric and what it will take to make that happen. He has worked with the World Bank, ADB, UITP and IFC. </p>
                   <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Is-there-an-e-bus-revolution-in-India---OoruLabs-Talking-Heads-podcast-Episode-06-e208nis" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
             <div>
@@ -409,7 +409,7 @@
             <div class="text">
               <h3 class="font-weight-light"><a href="#">Episode 01: First urban liveability themed cartoons in India? </a></h3>
               <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Commuter Series <span class="sep">/</span> 5 March 2023 <span class="sep">/</span> 32:41</small></span></div>
-              <p class="mb-4">We speak with Shilpi Sahu a runner and bicycle commuter in Bengaluru about her passion for illustrating contemporary urban issues with her pencil and canvas.</p>
+              <p class="mb-4">We speak with Shilpi Sahu a runner and bicycle commuter in Bengaluru about her passion for illustrating contemporary urban issues with her pencil and canvas. She tells us why she chose to illustrate what she saw during her commute and the plight of citizens as we run through some of our favourite pieces of work.</p>
                   <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/First-urban-liveability-themed-cartoons-in-India---OoruLabs-Commuter-Series-podcast-EP01-e1vsjlc" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
             <div>
@@ -428,7 +428,7 @@
             <div class="text">
               <h3 class="font-weight-light"><a href="#">Episode 05: Should you wear a bicycle helmet in the city? </a></h3>
               <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Hot Takes <span class="sep">/</span> 26 February 2023 <span class="sep">/</span> 35:06</small></span></div>
-              <p class="mb-4">Knerav and Sathya spar it out with the pros and cons of wearing a bicycle helmet for commute.</p>
+              <p class="mb-4">Knerav and Sathya spar it out with the pros and cons of wearing a bicycle helmet for commute. We frankly put out points that might be difficult and counter intutive for most people to accept.</p>
                   <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Should-you-wear-a-bicycle-helmet-in-the-city---OoruLabs-Podcast-Episode-05-e1vgsrm" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
             <div>
@@ -447,7 +447,7 @@
             <div class="text">
               <h3 class="font-weight-light"><a href="#">Episode 04: What the Dutch! </a></h3>
               <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 19 February 2023 <span class="sep">/</span> 51:31</small></span></div>
-              <p class="mb-4">We speak with Dirk De Jager, former Dy Mayor of various Amsterdam districts and consultant who has helped cities in Iran and Turkey put up bicycle lanes.</p>
+              <p class="mb-4">We speak with Dirk De Jager, former Dy Mayor of various Amsterdam districts and consultant who has helped cities in Iran and Turkey put up bicycle lanes. He tells us how "We are not Amsterdam" is a bad excuse because "Amsterdam was also us". THe steps to transform can be hard but extremely doable, but only if we did a few things now.</p>
                   <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/What-the-Dutch--OoruLabs-Podcast-Ep-4-e1v685i" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
             <div>
@@ -466,7 +466,7 @@
             <div class="text">
               <h3 class="font-weight-light"><a href="#">Episode 03: Did we miss the bus? </a></h3>
               <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 12 February 2023 <span class="sep">/</span> 41:22</small></span></div>
-              <p class="mb-4">We speak with Shreya Gadepalli about the story of the bus in India. She is the founder of Urbanworks Institute. She guided dozens of cities with ITDP India over two decades to design and implement public transport systems and inclusive streets, as well as regulate motor vehicle use.</p>
+              <p class="mb-4">We speak with Shreya Gadepalli of Urbanworks Institute about the story of the bus in India. WHy in the race to plon Metros we dont know some very startling facts about the bus. We discuss models of operation, wether the bus should be free, how parking plays a role etc. </p>
                   <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Did-we-miss-the-bus---OoruLabs-Podcast-EP3-e1urf8k" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
             <div>
@@ -565,13 +565,13 @@
               <div class="block-16">
                 <figure>
                   <img src="images/img_1.jpg" alt="Image placeholder" class="img-fluid rounded">
-                  <a href="https://vimeo.com/channels/staffpicks/93951774" class="play-button popup-vimeo"><span class="icon-play"></span></a>
+                  <a href="https://youtu.be/bpFlFWhpHe8" class="play-button popup-vimeo"><span class="icon-play"></span></a>
                 </figure>
               </div>
 
             </div>
 
-            <div class="mb-5">
+            <!--div class="mb-5">
               <h3 class="footer-heading mb-2">Subscribe Newsletter</h3>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit minima minus odio.</p>
 
@@ -584,7 +584,7 @@
                 </div>
               </form>
 
-            </div>
+            </div-->
 
           </div>
           
