--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
       <div class="container">
         <div class="row mb-5">
           <div class="col-md-12 text-center">
-            <h2 class="font-weight-bold text-black">Talking Heads - Featured Guests</h2>
+            <h2 class="font-weight-bold text-black">Featured Guests</h2>
+            <div class="text-white mb-3"><span class="text-black-opacity-05">OoruLabs <span class="sep">|</span> Talking Heads</span></div>
           </div>
         </div>
         <div class="nonloop-block-13 owl-carousel">
