--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
           <div class="text">
             <h5><span class="badge bg-success text-white">Coming soon</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 15: The problem with parking</a></h3>
-            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 13 May 2023 <span class="sep">/</span> </small></span></div>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 13 May 2023 <span class="sep">/</span> 01:01:51</small></span></div>
             <p class="mb-4">This episode is with Dr Paul Barter who talks about parking issues world wide. How sustainability in transport cannot ignore parking and its reform. He has worked for more than two decades on parking reforms and is the host of the Reinventing parking podcast.</p>
             <h5 class="mb-1">Also on</h5>
             <div>
