--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
         <div class="d-block d-md-flex podcast-entry bg-warning mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/img_4.jpg');"></div>
           <div class="text">
-            <h5 class="badge bg-primary text-white">This podcast is supported by "your organisation name"</h5>
+            <h5 class="btn bg-primary text-white" style="white-space: normal !important; word-wrap: break-word;">This podcast is supported by "your organisation name"</h5>
             <h3 class="font-weight-light"><a href="#">Episode 00: Podcast title</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Advertisement <span class="sep">/</span> 01 January 20xx <span class="sep">/</span> 00:00</small></span></div>
             <p class="mb-4">If you are a corporate you can support this podcast with a donation. We only do 52 podcasts each year. Your podcast entry on the site will get a red badge mention above the title and a supported by mention on the podcast and social media. The proceeds will go to a not for profit working to improve civic participation in neighbourhoods. A part of the funds will be used to make this podcast better for listeners. We have 80G so you can get tax exempt on the donation. We only accept donations in INR. <a href="mailto:oorulabs@gmail.com">Write to us</a> if you are interested.</p>
